--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -26,27 +26,16 @@ android:hardwareAccelerated = "true"
     <!-- Allows applications to write gpsd.sock, gpsd.pid, sl4agps.pid, s52ais.pid to sdcard -->
     <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE" />
 
+<uses-permission android:name="android.permission.ACCESS_GPS" />
+<uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
+<uses-permission android:name="android.permission.ACCESS_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <!-- Android 4.1.2 SDK-16 not reconize !
-    <uses-permission android:name="android.permission.RECORD_VIDEO"/>
-    -->
-
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" />
-    
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+
     <!--  NOT browser cache
     <uses-permission android:name="android.permission.CLEAR_APP_USER_DATA"/>
     -->
@@ -81,9 +70,6 @@ android:hardwareAccelerated = "true"
                   <!--
                   android:theme                 = "@android:style/Theme.Holo"
                   android:clearTaskOnLaunch     = "true"
-                  
-                  debug - no orientation change
-                  android:screenOrientation     = "reverseLandscape"
                   -->
 
             <!-- Tell NativeActivity the name of or .so -->
@@ -102,8 +88,6 @@ android:hardwareAccelerated = "true"
 
         </activity>
 
-<!--
--->
         <activity android:name          = ".s52ui"
                   android:theme         = "@android:style/Theme.Translucent"
                   android:configChanges = "orientation|keyboardHidden|keyboard|screenSize|locale">
@@ -113,13 +97,10 @@ android:hardwareAccelerated = "true"
             </intent-filter>
         </activity>
 
-<!--
-                  android:theme         = "@android:style/Theme.Translucent
-                  android:theme         = "@android:style/Theme.Translucent.NoTitleBar"
--->
 
-        <!--      android:name       = ".BootUpReceiver" -->
-        <!--      android:label="@string/app_name"       -->
+`       <!--      android:theme         = "@android:style/Theme.Translucent.NoTitleBar" -->
+        <!--      android:name          = ".BootUpReceiver"  -->
+        <!--      android:label         = "@string/app_name" -->
 
         <!--
         <receiver android:enabled    = "true"
@@ -137,6 +118,23 @@ android:hardwareAccelerated = "true"
 
 </manifest>
 <!-- END_INCLUDE(manifest)
+
+
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.RECORD_VIDEO"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+
+
+
 
     allow script to kill com.googlecode.android_scripting on exit
     But install say:
