--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -27,14 +27,13 @@ android:hardwareAccelerated = "true"
     <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE" />
 
 
-<!-- GPS -->
-<uses-permission android:name="android.permission.ACCESS_GPS" />
-<uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
-<uses-permission android:name="android.permission.ACCESS_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- GPS -->
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
@@ -52,6 +51,7 @@ android:hardwareAccelerated = "true"
     <application android:label               = "@string/app_name"
                  android:hasCode             = "true"
                  android:debuggable          = "true"
+                 android:hardwareAccelerated = "true"
                  android:theme               = "@android:style/Theme.Holo.NoActionBar.Fullscreen"
                  >
 
