s52ui to account for devicePixelRatio for the Nexus 7

--- a/test/s52ui/Makefile
+++ b/test/s52ui/Makefile
@@ -9,7 +9,7 @@ DARTSDKPATH = /home/sduclos/dev/prog/dart/dart/dart-sdk/bin
 
 # in DARTSDKPATH/dart2js script:  --heap_growth_rate=512
 # also add --no_use_inlining to save 1 sec of compilation time
-web/s52ui.dart.js: web/s52ui.dart web/s52.dart web/s52ui.dart.js.deps
+web/s52ui.dart.js: web/s52ui.dart web/s52.dart
 	$(DARTSDKPATH)/dart2js web/s52ui.dart -oweb/s52ui.dart.js
 
 clean:
@@ -17,5 +17,6 @@ clean:
 
 #distclean: clean
 
+# copy to Android sdcard (s52ui.java must loadURL html for sdcard - not asset/www)
 install: web/s52ui.dart.js
-	adb push ../s52ui /sdcard/dart/s52ui
+	adb push web /sdcard/s52ui
