experimental S52_USE_SYM_VESSEL_DNGHL, remove heading on ARPA, fix s52ui for Dart upgrade

--- a/test/s52ui/pubspec.yaml
+++ b/test/s52ui/pubspec.yaml
@@ -1,6 +1,5 @@
 name: s52ui
-description: A sample web application
+description: HTML UI for testing s52droid
 dependencies:
   browser: any
-dependencies:
-  js: { hosted: js }
+  js: any
