upgrade to android 4.4, add vessel colour DNGHL, code clean up

--- a/test/s52ui/Makefile
+++ b/test/s52ui/Makefile
@@ -9,8 +9,9 @@ DARTSDKPATH = /home/sduclos/dev/prog/dart/dart/dart-sdk/bin
 
 # in DARTSDKPATH/dart2js script:  --heap_growth_rate=512
 # also add --no_use_inlining to save 1 sec of compilation time
+# --disable-native-live-type-analysis - Disable the optimization that removes unused native types from dart:html 
 web/s52ui.dart.js: web/s52ui.dart web/s52.dart
-	$(DARTSDKPATH)/dart2js --disable-native-live-type-analysis web/s52ui.dart -oweb/s52ui.dart.js
+	$(DARTSDKPATH)/dart2js --checked web/s52ui.dart -oweb/s52ui.dart.js
 
 clean:
 	rm -f web/s52ui.dart.js.deps web/s52ui.dart.js.map  web/s52ui.dart.precompiled.js
