--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -30,33 +30,34 @@ android:hardwareAccelerated = "true"
     <!-- GPS -->
     <uses-permission android:name="android.permission.ACCESS_GPS" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" />
-    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <!--  NOT browser cache
     <uses-permission android:name="android.permission.CLEAR_APP_USER_DATA"/>
     -->
 
     <!-- This is the platform API where NativeActivity was introduced. -->
-    <!-- target sdk 11 to get action bar  (and no MENU)                -->
+    <!-- target sdk 11 to get action bar  (and no MENU), 16 work on 4.3-->
     <uses-sdk android:minSdkVersion    = "3"
-              android:targetSdkVersion = "16" />
+              android:targetSdkVersion = "19" />
 
     <application android:label               = "@string/app_name"
                  android:hasCode             = "true"
                  android:debuggable          = "true"
                  android:hardwareAccelerated = "true"
-                 android:theme               = "@android:style/Theme.Holo.NoActionBar.Fullscreen"
+                 android:theme               = "@android:style/Theme.Holo.NoActionBar.TranslucentDecor"
                  >
 
 <!--
                  android:hardwareAccelerated = "true"
                  android:theme               = "@android:style/Theme.Holo"
                  android:theme               = "@android:style/Theme.Holo.NoActionBar.Fullscreen"
+                 android:theme               = "@android:style/Theme.Holo.NoActionBar.TranslucentDecor"
+                 Theme_Holo_NoActionBar_TranslucentDecor,
+                 Theme_Holo_Light_NoActionBar_TranslucentDecor,
+                 Theme_DeviceDefault_NoActionBar_TranslucentDecor,
+                 Theme_DeviceDefault_Light_NoActionBar_TranslucentDecor.
 -->
 
         <!-- Our activity is the built-in NativeActivity framework class.
@@ -91,7 +92,7 @@ android:hardwareAccelerated = "true"
         </activity>
 
         <activity android:name          = ".s52ui"
-                  android:theme         = "@android:style/Theme.Translucent"
+                  android:theme         = "@android:style/Theme.Translucent.NoTitleBar"
                   android:configChanges = "orientation|keyboardHidden|keyboard|screenSize|locale">
             <intent-filter>
                 <action   android:name  = "android.intent.action.MAIN" />
@@ -100,7 +101,8 @@ android:hardwareAccelerated = "true"
         </activity>
 
 
-`       <!--      android:theme         = "@android:style/Theme.Translucent.NoTitleBar" -->
+        <!--      android:theme         = "@android:style/Theme.Translucent.NoTitleBar" -->
+        <!--      android:theme         = "@android:style/Theme.Holo.NoActionBar.TranslucentDecor" -->
         <!--      android:name          = ".BootUpReceiver"  -->
         <!--      android:label         = "@string/app_name" -->
 
@@ -121,8 +123,19 @@ android:hardwareAccelerated = "true"
 </manifest>
 <!-- END_INCLUDE(manifest)
 
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" />
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+
+    Not Define in android doc!
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION" />
+    wifi location
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    Cordova need one of those or both to get 'deviceready' working
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
 
     <uses-permission android:name="android.permission.CAMERA" />
